--- a/deliverables.html
+++ b/deliverables.html
@@ -183,7 +183,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-slate-800 mt-6">Spreadsheet</h3>
-                        <p class="text-slate-600 mt-2">I could've shared a boring ol' spreadsheet with lots of numbers and formulas. And, while there's obviously a time and place for that, I figured I'd make a fun one for you to enjoy, instead :)</p>
+                        <p class="text-slate-600 mt-2">I could've shared a boring ol' spreadsheet. But, while there's obviously a time and place for that, I figured I'd make a fun one for you to enjoy, instead :)</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Spreadsheet &rarr;</div>
                     </a>
 
