--- a/thankyou.html
+++ b/thankyou.html
@@ -114,7 +114,18 @@
         </section>
         
         <section id="video" class="container mx-auto px-6 pt-24 pb-16">
-            <div class="max-w-4xl mx-auto"><div class="aspect-video bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200"><iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="w-full h-full" title="Placeholder Video"></iframe></div></div>
+            <div class="max-w-4xl mx-auto">
+                <div class="aspect-video bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200">
+                    <iframe 
+                        src="https://www.youtube.com/embed/MMUyVmgDWMQ?rel=0" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen 
+                        class="w-full h-full" 
+                        title="Thank You Video">
+                    </iframe>
+                </div>
+            </div>
         </section>
 
         <section id="next-steps" class="container mx-auto px-6 pt-16 pb-16">
