--- a/responses.html
+++ b/responses.html
@@ -157,9 +157,50 @@
                 <!-- Group 3: Situational Questions -->
                 <h2 class="text-2xl font-bold text-slate-800 mb-6 mt-12">Situational Questions</h2>
                 <div class="space-y-4">
-                    <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden"><button class="accordion-header w-full flex justify-between items-center text-left p-6"><span class="text-lg font-semibold text-slate-800">Tell us about a time you improved a business process.</span><div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div></button><div class="accordion-content px-6"><div class="prose prose-slate max-w-none text-slate-600"><p>At our trade shows, we initially collected leads by hand in a notebook. I knew there had to be a better way.</p><br><p>To create an affordable in-house solution, I designed a system using a tablet that automatically scanned attendee badges, recorded their information in our CRM, and enrolled them in a tailored email campaign based on customer tags.</p><br><p>This single shift dramatically decreased our follow-up time, increased prospect responsiveness by 42%, and reduced our average lead conversion time by 38 days.</p></div></div></div>
-                    <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden"><button class="accordion-header w-full flex justify-between items-center text-left p-6"><span class="text-lg font-semibold text-slate-800">Share an example of a deliverable that simplified a complex topic.</span><div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div></button><div class="accordion-content px-6"><div class="prose prose-slate max-w-none text-slate-600"><p>Here you go! In this deck, I simplified [insert what I simplified here].</p><p><a href="#">[Insert Link to Deck/Memo]</a></p></div></div></div>
-                    <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden"><button class="accordion-header w-full flex justify-between items-center text-left p-6"><span class="text-lg font-semibold text-slate-800">Share a link to a short video introducing yourself.</span><div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div></button><div class="accordion-content px-6"><div class="prose prose-slate max-w-none text-slate-600"><p>Nice to meet you!</p><p><a href="#">[Insert Link to Video]</a></p></div></div></div>
+                    <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden">
+                        <button class="accordion-header w-full flex justify-between items-center text-left p-6">
+                            <span class="text-lg font-semibold text-slate-800">Tell us about a time you improved a business process.</span>
+                            <div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div>
+                        </button>
+                        <div class="accordion-content px-6">
+                            <div class="prose prose-slate max-w-none text-slate-600">
+                                <p>At our trade shows, we initially collected leads by hand in a notebook. I knew there had to be a better way.</p>
+                                <br>
+                                <p>To create an affordable in-house solution, I designed a system using a tablet that automatically scanned attendee badges, recorded their information in our CRM, and enrolled them in a tailored email campaign based on customer tags.</p>
+                                <br>
+                                <p>This single shift dramatically decreased our follow-up time, increased prospect responsiveness by 42%, and reduced our average lead conversion time by 38 days.</p>
+                                <br>
+                                <p>If you'd like to learn more, you can see this story in a deck format by clicking on the 'Deck' at <a href="https://walterforacq.com/deliverables" target="_blank" rel="noopener noreferrer">walterforacq.com/deliverables</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden">
+                        <button class="accordion-header w-full flex justify-between items-center text-left p-6">
+                            <span class="text-lg font-semibold text-slate-800">Share an example of a deliverable that simplified a complex topic.</span>
+                            <div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div>
+                        </button>
+                        <div class="accordion-content px-6">
+                            <div class="prose prose-slate max-w-none text-slate-600">
+                                <p>The attached memo is a real-world example of my work. I took a dense, 10-page legal analysis I'd written for a senior partner at a Big Law firm and synthesized it into this three-page strategic recommendation for a senior decision-maker.</p>
+                                <br>
+                                <p>To do this, I intentionally restructured the traditional legalese into the Why, What, How, Now framework. This memo demonstrates my ability to simplify complex concepts, quantify risk and probability, and deliver a clear, actionable plan - some of the same skills I will bring to the Strategy Associate role.</p>
+                                <br>
+                                <p><a href="https://drive.google.com/file/d/1ySMl4OD0QhPG8Tt1YAFsYkP2oWtwISoB/view" target="_blank" rel="noopener noreferrer">View the Memo</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item bg-white rounded-xl shadow-md border border-slate-200 overflow-hidden">
+                        <button class="accordion-header w-full flex justify-between items-center text-left p-6">
+                            <span class="text-lg font-semibold text-slate-800">Share a link to a short video introducing yourself.</span>
+                            <div class="icon flex-shrink-0 ml-4 h-8 w-8 rounded-full bg-slate-100 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" /></svg></div>
+                        </button>
+                        <div class="accordion-content px-6">
+                            <div class="prose prose-slate max-w-none text-slate-600">
+                                <p>Nice to meet you!</p>
+                                <p><a href="https://www.youtube.com/watch?v=Dco0GMCNGVo" target="_blank" rel="noopener noreferrer">https://www.youtube.com/watch?v=Dco0GMCNGVo</a></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
