--- a/thankyou.html
+++ b/thankyou.html
@@ -260,11 +260,20 @@
                     <div class="text-center">
                         <h3 class="text-2xl font-bold text-slate-800">Congratulations & Thank You!</h3>
                         <p class="mt-4 text-slate-600">You've successfully navigated my application. As a small token of my appreciation for your team's time and effort, please enjoy a coffee on me.</p>
-                        <div class="my-6 p-6 bg-green-800 text-white rounded-lg shadow-lg">
-                            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d3/Starbucks_Corporation_Logo_2011.svg/1200px-Starbucks_Corporation_Logo_2011.svg.png" alt="Starbucks Logo" class="h-12 mx-auto mb-4" />
-                            <p class="font-semibold">Starbucks Gift Card for the Team</p>
-                            <p class="text-3xl font-bold tracking-widest my-2">XXXX XXXX XXXX XXXX</p>
-                            <p class="text-sm">PIN: XXXX</p>
+                        <div class="my-6 p-6 bg-black text-white rounded-xl shadow-lg text-left">
+                            <svg class="h-8 mx-auto mb-5" viewBox="0 0 512 512" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M336.4 256c0 44.2-35.8 80-80 80s-80-35.8-80-80 35.8-80 80-80 80 35.8 80 80zM512 256c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zm-48 0c0-114.9-93.1-208-208-208S48 141.1 48 256s93.1 208 208 208 208-93.1 208-208z"></path></svg>
+                            <h4 class="text-center font-bold text-xl tracking-wider mb-4">Uber Eats</h4>
+                            <div class="mt-4 space-y-3 bg-gray-800 p-4 rounded-lg">
+                                <div>
+                                    <label class="text-xs text-gray-400 font-medium">Card #</label>
+                                    <p class="font-mono tracking-wider text-lg">3086 4612 3040 7663 239</p>
+                                </div>
+                                <div>
+                                    <label class="text-xs text-gray-400 font-medium">Gift Code</label>
+                                    <p class="font-mono tracking-wider text-lg">NAA7UZAPZ5XQHTFK</p>
+                                </div>
+                            </div>
+                            <a href="https://www.uber.com/us/en/gift-cards/redeem/" target="_blank" rel="noopener noreferrer" class="block w-full text-center mt-6 bg-green-500 text-white font-semibold py-3 px-4 rounded-lg hover:bg-green-600 transition-colors">Redeem Now</a>
                         </div>
                         <p class="text-sm text-slate-500 italic">I believe that going the extra mile is a reflection of one's character. I hope this brings a little boost to your team's day.</p>
                         <button id="close-quiz-success" class="mt-6 bg-sky-500 text-white font-semibold py-2 px-6 rounded-lg hover:bg-sky-600 transition-colors">Close</button>
