--- a/thankyou.html
+++ b/thankyou.html
@@ -260,7 +260,8 @@
                     <div class="text-center">
                         <h3 class="text-2xl font-bold text-slate-800">Congratulations & Thank You!</h3>
                         <p class="mt-4 text-slate-600">You've successfully navigated my application. As a small token of my appreciation for your team's time and effort, please enjoy a coffee on me.</p>
-                        <div class="my-6 p-6 bg-black text-white rounded-xl shadow-lg text-left">
+                        <div class="my-6 p-6 bg-black text-white rounded-xl shadow-lg text-left relative">
+                            <div class="absolute top-4 right-4 bg-white/10 backdrop-blur-sm text-white text-lg font-bold px-4 py-1 rounded-full border border-white/20">$25</div>
                             <svg class="h-8 mx-auto mb-5" viewBox="0 0 512 512" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M336.4 256c0 44.2-35.8 80-80 80s-80-35.8-80-80 35.8-80 80-80 80 35.8 80 80zM512 256c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zm-48 0c0-114.9-93.1-208-208-208S48 141.1 48 256s93.1 208 208 208 208-93.1 208-208z"></path></svg>
                             <h4 class="text-center font-bold text-xl tracking-wider mb-4">Uber Eats</h4>
                             <div class="mt-4 space-y-3 bg-gray-800 p-4 rounded-lg">
