--- a/goals.html
+++ b/goals.html
@@ -148,6 +148,41 @@
             </div>
         </section>
 
+        <!-- Updated Learning Goals Section -->
+        <section id="learning-goals" class="py-24 bg-slate-50">
+            <div class="container mx-auto px-6">
+                <div class="max-w-4xl mx-auto">
+                    <div class="text-center mb-16">
+                        <h2 class="text-3xl md:text-4xl font-bold text-slate-900">Immediate Learning & Growth Goals</h2>
+                        <p class="mt-4 max-w-2xl mx-auto text-slate-600">These are the key areas I am really excited improving at ACQ!</p>
+                    </div>
+                    <div class="max-w-2xl mx-auto grid md:grid-cols-2 gap-8 text-center">
+                        <!-- Goal 1: Tax -->
+                        <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200 flex flex-col items-center">
+                            <div class="flex-shrink-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold mt-4 text-slate-800">Advanced Tax Strategy</h3>
+                            <p class="text-slate-600 mt-2">Learn best-in-class tax practices, deal structures, and strategies to help businesses grow in a tax-efficient manner.</p>
+                        </div>
+                        <!-- Goal 2: Paid Ads -->
+                        <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200 flex flex-col items-center">
+                             <div class="flex-shrink-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold mt-4 text-slate-800">Paid Acquisition</h3>
+                            <p class="text-slate-600 mt-2">Develop expertise in paid acquisition channels to generate exceptional ROAS and drive scalable growth for client businesses.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End of Section -->
+
         <section id="next-page" class="section-compact bg-white border-t border-slate-200">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-2xl font-bold text-slate-800">Curious about who I am beyond the work?</h2>
