--- a/goals.html
+++ b/goals.html
@@ -154,7 +154,7 @@
                 <div class="max-w-4xl mx-auto">
                     <div class="text-center mb-16">
                         <h2 class="text-3xl md:text-4xl font-bold text-slate-900">Immediate Learning & Growth Goals</h2>
-                        <p class="mt-4 max-w-2xl mx-auto text-slate-600">These are the key areas I am really excited improving at ACQ!</p>
+                        <p class="mt-4 max-w-2xl mx-auto text-slate-600">These are the key areas I am really excited improving at ACQ! (Among everything else I'll learn, too!)</p>
                     </div>
                     <div class="max-w-2xl mx-auto grid md:grid-cols-2 gap-8 text-center">
                         <!-- Goal 1: Tax -->
