--- a/deliverables.html
+++ b/deliverables.html
@@ -173,7 +173,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3h3m-3 4h3m-3 4h3m-3 4h3" /></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-slate-800 mt-6">Deck</h3>
-                        <p class="text-slate-600 mt-2">A Hormozi-style deck breaking down how I identified a money-leaking process and built a system that increased lead conversion and shortened the sales cycle by 38 days.</p>
+                        <p class="text-slate-600 mt-2">I share how I identified a money-leaking process and built a system that increased lead conversion and shortened the sales cycle by 38 days. (Having now read $100M Money Models, I recognize that the Money Model could've greatly been improved, too. But that's a conversation for a different day.)</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Deck &rarr;</div>
                     </button>
 
@@ -183,7 +183,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 7h6m0 10v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3m-3 3h3m-3 0v-3M15 3H9a2 2 0 00-2 2v14a2 2 0 002 2h6a2 2 0 002-2V5a2 2 0 00-2-2z" /></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-slate-800 mt-6">Spreadsheet</h3>
-                        <p class="text-slate-600 mt-2">I could've shared a boring ol' spreadsheet. But, while there's obviously a time and place for that, I figured I'd make a fun one for you to enjoy, instead :)</p>
+                        <p class="text-slate-600 mt-2">I built an interactive game based on Alex's $100M Money Model principles. I primarily wanted to demonstrate my demonstrate my 1) comfort with various Excel formulas/logic, 2) understanding of basic accounting, 3) familiarity with the Money Models, and 4) creativity. Enjoy!</p>
                         <div class="mt-6 font-semibold text-sky-500 group-hover:underline">View Spreadsheet &rarr;</div>
                     </a>
 
