--- a/responses.html
+++ b/responses.html
@@ -169,11 +169,23 @@
                         </button>
                         <div class="accordion-content px-6">
                             <div class="prose prose-slate max-w-none text-slate-600">
+                                <p>Here are two examples that showcase my ability to simplify complex topics for different audiences.</p>
+                                <br>
+                                <p><strong>1. Strategic Memo for a Senior Partner:</strong></p>
                                 <p>The attached memo is a real-world example of my work. I took a dense, 10-page legal analysis I'd written for a senior partner at a Big Law firm and synthesized it into this three-page strategic recommendation for a senior decision-maker.</p>
                                 <br>
                                 <p>To do this, I intentionally restructured the traditional legalese into the Why, What, How, Now framework. This memo demonstrates my ability to simplify complex concepts, quantify risk and probability, and deliver a clear, actionable plan - some of the same skills I will bring to the Strategy Associate role.</p>
                                 <br>
                                 <p><a href="https://drive.google.com/file/d/1ySMl4OD0QhPG8Tt1YAFsYkP2oWtwISoB/view" target="_blank" rel="noopener noreferrer">View the Memo</a></p>
+                                <br>
+                                <hr class="my-6 border-slate-200">
+                                <br>
+                                <p><strong>2. Interactive Spreadsheet for Business Concepts:</strong></p>
+                                <p>To help someone grasp the core ideas from Alex Hormozi's "$100M Money Models," I created an interactive spreadsheet. While it's not a perfect simulation of a real-world business, I designed it as a hands-on "game" that allows users to see the concepts in action.</p>
+                                <br>
+                                <p>This project demonstrates my ability to take complex business frameworks and distill them into an engaging and educational tool, making them more accessible and understandable.</p>
+                                <br>
+                                <p><a href="https://docs.google.com/spreadsheets/d/1-Juz9s4la05DOeegntJjgvlCElcWG2lzGg8xXKbklSA/edit?gid=0#gid=0" target="_blank" rel="noopener noreferrer">View the Spreadsheet</a></p>
                             </div>
                         </div>
                     </div>
