--- a/responses.html
+++ b/responses.html
@@ -172,7 +172,7 @@
                                 <p>Here are two examples that showcase my ability to simplify complex topics for different audiences.</p>
                                 <br>
                                 <p><strong>1. Strategic Memo for a Senior Partner:</strong></p>
-                                <p>The attached memo is a real-world example of my work. I took a dense, 10-page legal analysis I'd written for a senior partner at a Big Law firm and synthesized it into this three-page strategic recommendation for a senior decision-maker.</p>
+                                <p>The attached memo is a real-world example of my work. I took a dense, 10-page legal analysis I'd written for a senior partner at a Big Law firm and synthesized it into this three-page strategic recommendation for a senior decision-maker. We ended the case negotiations with a favorable outcome for our client.</p>
                                 <br>
                                 <p>To do this, I intentionally restructured the traditional legalese into the Why, What, How, Now framework. This memo demonstrates my ability to simplify complex concepts, quantify risk and probability, and deliver a clear, actionable plan - some of the same skills I will bring to the Strategy Associate role.</p>
                                 <br>
