--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
             from { width: 100%; }
             to { width: 0%; }
         }
+        
+        /* --- Memo Breath Animation --- */
+        @keyframes breath {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.02); /* A subtle scale for the breathing effect */
+            }
+        }
+
+        .breathing-hover:hover {
+            animation: breath 2.5s ease-in-out infinite;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -240,26 +254,29 @@
                     <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">My First Deliverable To You</p>
                     <p class="mt-4 max-w-2xl mx-auto text-slate-600">This site is a live demonstration of the clarity, quality, and initiative I bring to my work. I know you have a memo-writing culture, so I wrote you one.</p>
                 </div>
-                <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200">
-                    <div class="memo-grid items-center mb-6 text-sm md:text-base">
-                        <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Recruiting Team & Leadership</p>
-                        <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
-                        <p class="memo-label">DATE:</p><p id="memo-date" class="text-slate-800"></p>
-                        <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Application for Strategy Associate Role</p>
+                <!-- The memo is now a clickable link -->
+                <a href="https://drive.google.com/file/d/1hpY1kCiG_Nzj4_TfYZ_sZq9BlcQD0JIw/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="block group">
+                    <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200 cursor-pointer transition-all duration-300 group-hover:shadow-sky-100/80 group-hover:shadow-2xl breathing-hover">
+                        <div class="memo-grid items-center mb-6 text-sm md:text-base">
+                            <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Recruiting Team & Leadership</p>
+                            <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
+                            <p class="memo-label">DATE:</p><p id="memo-date" class="text-slate-800"></p>
+                            <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Application for Strategy Associate Role</p>
+                        </div>
+                        <hr class="border-slate-200 my-8">
+                        <div class="prose prose-slate max-w-none text-slate-600 space-y-4">
+                            <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
+                            <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. A flat document would fall short of adequately showcasing the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences and will be bringing to ACQ. This site fixes that.</p>
+                            <p><strong>How:</strong> This website serves as a comprehensive, multi-part deliverable designed for clarity and efficiency. It is my application in action. Here, you can find:<br>
+                                •   My full story and background.<br>
+                                •   A detailed breakdown of my alignment with your culture.<br>
+                                •   A proactive 30-60-90 day plan to create immediate value.<br>
+                                •   A glimpse into who I am beyond my work.</p>
+                            <p><strong>Now:</strong> I invite you to explore the pages of this site. Each section is a testament to the quality and initiative I bring. The next step is to schedule a conversation, where we can discuss how my unique blend of skills and my deep resonance with your mission can be an immediate asset to your team.</p>
+                            <p class="pt-4">Thank you for the opportunity to apply and for your time and consideration.</p>
+                        </div>
                     </div>
-                    <hr class="border-slate-200 my-8">
-                    <div class="prose prose-slate max-w-none text-slate-600 space-y-4">
-                        <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
-                        <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. A flat document would fall short of adequately showcasing the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences and will be bringing to ACQ. This site fixes that.</p>
-                        <p><strong>How:</strong> This website serves as a comprehensive, multi-part deliverable designed for clarity and efficiency. It is my application in action. Here, you can find:<br>
-                            •   My full story and background.<br>
-                            •   A detailed breakdown of my alignment with your culture.<br>
-                            •   A proactive 30-60-90 day plan to create immediate value.<br>
-                            •   A glimpse into who I am beyond my work.</p>
-                        <p><strong>Now:</strong> I invite you to explore the pages of this site. Each section is a testament to the quality and initiative I bring. The next step is to schedule a conversation, where we can discuss how my unique blend of skills and my deep resonance with your mission can be an immediate asset to your team.</p>
-                        <p class="pt-4">Thank you for the opportunity to apply and for your time and consideration.</p>
-                    </div>
-                </div>
+                </a>
             </div>
         </section>
 
