--- a/index.html
+++ b/index.html
@@ -117,20 +117,6 @@
             from { width: 100%; }
             to { width: 0%; }
         }
-        
-        /* --- Memo Breath Animation --- */
-        @keyframes breath {
-            0%, 100% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.02); /* A subtle scale for the breathing effect */
-            }
-        }
-
-        .breathing-hover:hover {
-            animation: breath 2.5s ease-in-out infinite;
-        }
     </style>
 </head>
 <body class="antialiased">
@@ -256,7 +242,7 @@
                 </div>
                 <!-- The memo is now a clickable link -->
                 <a href="https://drive.google.com/file/d/1hpY1kCiG_Nzj4_TfYZ_sZq9BlcQD0JIw/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="block group">
-                    <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200 cursor-pointer transition-all duration-300 group-hover:shadow-sky-100/80 group-hover:shadow-2xl breathing-hover">
+                    <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200 cursor-pointer transition-all duration-300 group-hover:shadow-sky-100/80 group-hover:shadow-2xl group-hover:scale-[1.02]">
                         <div class="memo-grid items-center mb-6 text-sm md:text-base">
                             <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Recruiting Team & Leadership</p>
                             <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
