--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
                         </div>
                         <hr class="border-slate-200 my-8">
                         <div class="prose prose-slate max-w-none text-slate-600 space-y-4">
-                            <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
-                            <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. A flat document would fall short of adequately showcasing the drive, work ethic, and strategic thinking I've cultivated through years of unconventional, intentional experiences and will be bringing to ACQ. This site fixes that.</p>
+                            <p><strong>Why:</strong> To truly demonstrate my fit for the Advisory Strategy Associate role, a standard resume is insufficient. I know you value competitive greatness and I believe you deserve an application that embodies it. This website is my solution; I hope this is the best application you've ever received at ACQ.</p>
+                            <p><strong>What:</strong> The mission is to convey the depth of my alignment with your core values - Competitive Greatness, Sincere Candor, and Unimpeachable Character - and to prove my readiness to contribute from day one. Through years of unconventional, intentional experiences, I’ve developed a strong drive, work ethic, and strategic thinking that I’m really excited to bring to ACQ. </p>
                             <p><strong>How:</strong> This website serves as a comprehensive, multi-part deliverable designed for clarity and efficiency. It is my application in action. Here, you can find:<br>
-                                •   My full story and background.<br>
-                                •   A detailed breakdown of my alignment with your culture.<br>
-                                •   A proactive 30-60-90 day plan to create immediate value.<br>
-                                •   A glimpse into who I am beyond my work.</p>
-                            <p><strong>Now:</strong> I invite you to explore the pages of this site. Each section is a testament to the quality and initiative I bring. The next step is to schedule a conversation, where we can discuss how my unique blend of skills and my deep resonance with your mission can be an immediate asset to your team.</p>
+                            • My full story and background.<br>
+                            • A detailed breakdown of my alignment with your culture.<br>
+                            • A proactive 30-60-90 day plan to create immediate value.<br>
+                            • A glimpse into who I am beyond my work.</p>
+                            <p><strong>Now:</strong> I invite you to explore the pages of this site. Each section is a testament to the quality and initiative I bring. When you’re ready, the next step is to schedule a conversation, where we can discuss how my unique blend of skills can be an immediate asset to your team.</p>
                             <p class="pt-4">Thank you for the opportunity to apply and for your time and consideration.</p>
                         </div>
                     </div>
