--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
         <div class="absolute inset-0 bg-gradient-to-b from-transparent to-slate-50"></div>
         <div class="z-10">
             <h1 class="font-extrabold tracking-tight text-slate-900">
-                <span class="block text-4xl md:text-6xl lg:text-7xl highlight-text">Thank You For Visiting</span>
+                <span class="block text-4xl md:text-6xl lg:text-7xl highlight-text pb-4">Thank You For Visiting</span>
             </h1>
             <p class="mt-6 max-w-2xl mx-auto text-lg md:text-xl text-slate-600">
-                This website is no longer active.
+                This website is no longer active. I appreciate you stopping by!
             </p>
         </div>
     </section>
 
 </body>
 </html>
+
+
